--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
+    "husky": "^7.0.1",
     "jest-mock-extended": "^2.0.1",
     "prisma": "^2.28.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run db:deploy"
+    }
   }
 }
